added google fonts

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,8 @@
 /*!
 Theme Name: Humescores
-Theme URI: http://underscores.me/
+Theme URI: https://github.com/superwo/humescores
 Author: Radu
-Author URI: http://underscores.me/
+Author URI: https://github.com/superwo
 Description: An awesome new Humescores-based theme!
 Version: 1.0.0
 License: GNU General Public License v2 or later
